--- a/zad1ciagiznakow.html
+++ b/zad1ciagiznakow.html
@@ -33,7 +33,7 @@ const divW = document.querySelector('div.wynik');
 btn.addEventListener('click', ()=>{
 const imie = document.querySelector('input[name="imie"]`).value;
 
-div.textContent = sprawdzImie(imie);
+divW.textContent = sprawdzImie(imie);
 });
 </script>
 </body>
