--- a/zdarzenia.html
+++ b/zdarzenia.html
@@ -33,7 +33,7 @@
     //przypisujemy obsluge zdarzenia klikniecia myszą
     obiektDiv.addEventListener('click', function(){
 //zmiana koloru czcionki
-let los = getRandomIntInclusive(0, 4);
+let los = getRandomInt(0, 4);
 obiektDiv.style.color = colors[los];
     });
 
